[modify] テーマカラーを変更

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ Author: uiCookies.com
 
 # Body  (text): #888
 # Heading Color #0E1555
-# Theme Color (link color) #FD367E
+# Theme Color (link color) #00BAD9
 # Mid grey (sub header) #666666
 # -------------------------------------------------------------------*/
 
@@ -94,7 +94,7 @@ h6 {
  * LINK STYLE
  *------------------------------------------*/
 a {
-    color              : #fd367e;
+    color              : #00BAD9;
     text-decoration    : none;
     -webkit-transition : all 0.3s ease 0s;
     -moz-transition    : all 0.3s ease 0s;
@@ -149,16 +149,16 @@ ul {
 
 /*btn-primary*/
 .btn-primary {
-    background-color : #fd367e;
-    border-color     : #fd367e;
+    background-color : #00BAD9;
+    border-color     : #00BAD9;
     }
 
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active:focus {
     background   : transparent;
-    color        : #fd367e;
-    border-color : #fd367e;
+    color        : #00BAD9;
+    border-color : #00BAD9;
     }
 
 /*btn-default*/
@@ -172,8 +172,8 @@ ul {
 .btn-default:focus,
 .btn-default:active:focus {
     background-color : transparent;
-    color            : #fd367e;
-    border-color     : #fd367e;
+    color            : #00BAD9;
+    border-color     : #00BAD9;
     }
 
 button:focus,
@@ -286,7 +286,7 @@ button:focus,
 
 .main-menu .nav li a:hover,
 .main-menu .nav li.active a {
-    color      : #fd367e;
+    color      : #00BAD9;
     background : transparent;
     }
 
@@ -702,7 +702,7 @@ button:focus,
 .form-control:focus,
 .form-control:active {
     box-shadow   : none;
-    border-color : #fd367e;
+    border-color : #00BAD9;
     }
 
 
