[modify] トップビューをレスポンシブに調整

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,9 @@ ul {
     list-style : none;
     }
 
+/*SP br enable*/
+.br-sp { display: none; }
+
 /*Button Style*/
 .btn {
     padding        : 10px 30px;
@@ -359,14 +362,13 @@ button:focus,
  * Jumbotron
  *-------------------*/
 
-.jumbotron {
-    /*background            : url("../img/img-jumbotron-bg.jpg");*/
+.orig-jumbotron {
     background-color      : white;
     background-size       : cover;
     padding               : 0;
     margin                : 0;
     height                : 100vh;
-    min-height            : 700px;
+    min-height            : 500px;
     vertical-align        : middle;
     position              : relative;
     background-attachment : fixed;
@@ -375,36 +377,47 @@ button:focus,
     overflow              : hidden;
     }
 
-.jumbotron .content {
+.orig-jumbotron .content {
     color             : #ffffff;
     position          : absolute;
-    top               : 50%;
+    top               : 30%;
     left              : 0;
     right             : 0;
     height            : 30%;
-    width             : 100%;
-    margin            : 0 auto;
-    padding           : 0 20%;
+    /*width             : 1170px;*/
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
     transform         : translateY(-50%);
     -webkit-transform : translateY(-50%);
     -moz-transform    : translateY(-50%);
-    }
+}
 
-.jumbotron .content .typewriter {
+.orig-jumbotron .content-one {
+  top: 40%;
+}
+
+.orig-jumbotron .content-two {
+  top: 72%;
+}
+
+.orig-jumbotron .content .typewriter {
     color     : #333333;
-    font-size: 30px;
-    /*font-weight : bold;*/
-    }
+    font-size: 40px;
+    line-height: 135%;
+  }
 
-.jumbotron .content .event-date {
-    width: 268px;
-    height: 25px;
-    margin: 20px 0 10px 0;
+.orig-jumbotron .content .event-date {
+    width: 235px;
+    height: 22px;
+    margin: 10px 0 10px 0;
     background-image:url(../img/event-date.svg);
     background-size:100%;
     }
 
-.jumbotron .btn {
+.orig-jumbotron .btn {
     background: #19b5c1;
     background: linear-gradient(90deg,#19b5c1,#28c88c);
     margin-top : 40px;
@@ -413,30 +426,31 @@ button:focus,
     transition: all .15s ease-in-out;
 }
 
-.jumbotron .btn:hover {
+.orig-jumbotron .btn:hover {
   -ms-transform: translateY(-2px);
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
   box-shadow: 0 2px 6px 0 rgba(25,181,193,.5);
 }
 
-.jumbotron .btn-shadow {
+.orig-jumbotron .btn-shadow {
     box-shadow: 0 2px 6px 0 rgba(25,181,193,.5);
 }
 
-.jumbotron .btn-shadow:hover {
+.orig-jumbotron .btn-shadow:hover {
     box-shadow: 1px 3px 7px 0 rgba(25,181,193,.5);
 }
 
-.jumbotron span {
+.orig-jumbotron span {
   text-decoration: none;
 }
 
-.jumbotron .catch-copy {
+.orig-jumbotron .catch-copy {
   font-weight: 900;
+
 }
 
-.jumbotron .input-catch-copy {
+.orig-jumbotron .input-catch-copy {
   font-weight: 900;
 }
 
@@ -444,31 +458,17 @@ button:focus,
   margin-top: 10px;
 }
 
-.jumbotron .event-share-nav ul {
+.orig-jumbotron .event-share-nav ul {
   width: 600px;
   padding:0;
   font-size:0px;
 }
 
-.jumbotron .event-share-nav li {
+.orig-jumbotron .event-share-nav li {
   display: inline-block;
   text-align: center;
   padding: 0 1.5px;
 }
-
-@media (max-width : 600px) {
-    .jumbotron .content {
-        min-height : auto;
-        }
-
-    .jumbotron .content h1 {
-        font-size : 26px;
-        }
-
-    .jumbotron .content p.lead {
-        font-size : 15px;
-        }
-    }
 
 /*---------------------------
  * Section Wrapper
@@ -880,3 +880,13 @@ button:focus,
       opacity: 1;
     }
   }
+
+  /* ---------------------------------------------- /*
+   * ChatSupport スマホは非表示
+  /* ---------------------------------------------- */
+
+@media (max-width: 700px) {
+  .mcs-chatLayout{
+    display: none;
+  }
+}
