[modify] トップビューにパーシャルエフェクトを追加

--- a/css/customize.css
+++ b/css/customize.css
@@ -1,6 +1,9 @@
 /* --------------------------------------------- */
 /* ▼モバイルファースト iPhone5相当 (全環境に共通のデザイン) */
 /* --------------------------------------------- */
+.background-particles canvas{
+  display: inline-flex;
+}
 
 
 /* --------------------------------------------- */
@@ -67,6 +70,12 @@
   }
   .orig-jumbotron .content-two {
     top: 70%;
+  }
+  .event-share-nav {
+    margin-top: 20px;
+  }
+  span.title-cursor {
+    font-size: 58px;
   }
 }
 /* ------------------------------------ */
