[delete]　不要なファイルを削除

--- a/css/style.css
+++ b/css/style.css
@@ -801,7 +801,7 @@ button:focus,
 
 #status,
 .status-mes {
-    background-image    : url(../img/preloader.gif);
+    background-image    : url(../img/preloader2.gif);
     background-position : center;
     background-repeat   : no-repeat;
     height              : 200px;
