--- a/css/style.css
+++ b/css/style.css
@@ -824,7 +824,7 @@ button:focus,
 
 #status,
 .status-mes {
-    background-image    : url(../img/preloader2.gif);
+    background-image    : url(../img/preloader_blue.gif);
     background-position : center;
     background-repeat   : no-repeat;
     height              : 200px;
