--- a/css/simple_page.css
+++ b/css/simple_page.css
@@ -210,7 +210,7 @@
 .timeline-event-copy p.time-line-event-comment {
   padding: 0;
   margin: 0;
-  color: #0e1555;
+  color: #333333;
 }
 .timeline-event-copy strong {
   font-weight: 700;
