--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ Author: uiCookies.com
 # [Color codes]
 
 # Body  (text): #888
-# Heading Color #0E1555
-# Theme Color (link color) #00BAD9
+# Heading Color #333333
+# Theme Color (link color) #28c88c
 # Mid grey (sub header) #666666
 # -------------------------------------------------------------------*/
 
@@ -56,7 +56,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     margin : 0 0 15px;
-    color  : #0e1555;
+    color  : #333333;
     }
 
 h1 {
@@ -98,7 +98,7 @@ h6 {
  * LINK STYLE
  *------------------------------------------*/
 a {
-    color              : #00BAD9;
+    color              : #28c88c;
     text-decoration    : none;
     -webkit-transition : all 0.3s ease 0s;
     -moz-transition    : all 0.3s ease 0s;
@@ -156,16 +156,16 @@ ul {
 
 /*btn-primary*/
 .btn-primary {
-    background-color : #00BAD9;
-    border-color     : #00BAD9;
+    background-color : #28c88c;
+    border-color     : #28c88c;
     }
 
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active:focus {
     background   : transparent;
-    color        : #00BAD9;
-    border-color : #00BAD9;
+    color        : #28c88c;
+    border-color : #28c88c;
     }
 
 /*btn-default*/
@@ -317,7 +317,7 @@ button:focus,
 
 .main-menu .nav li a:hover,
 .main-menu .nav li.active a {
-    color      : #00BAD9;
+    color      : #28c88c;
     background : transparent;
     }
 
@@ -328,7 +328,7 @@ button:focus,
 .main-menu .nav .entry-btn {
   margin: 2.5px 0 2.5px 20px;
   padding: 10px 20px;
-  border: solid 2px #00BAD9;
+  border: solid 2px #28c88c;
   border-radius: 25px;
 }
 
@@ -346,7 +346,7 @@ button:focus,
 
     .main-menu .nav li a {
         padding : 5px 0;
-        color: #0e1555;
+        color: #333333;
         }
 
     .navbar-collapse {
@@ -372,15 +372,15 @@ button:focus,
     }
 
 .sticky-nav .nav li a {
-    color : #0e1555;
+    color : #333333;
     }
 
 .sticky-nav .navbar-toggle .icon-bar{
     background: #333;
     }
 
-.sticky-nav .navbar-brand-svg {
-    fill: #00BADA;
+#linearGradientEmeraldRect {
+   fill: url(#linearGradientEmerald);
 }
 
 @media (max-width: 768px) {
@@ -625,7 +625,7 @@ button:focus,
     color            : #ffffff;
     padding          : 14px 40px;
     margin           : 0;
-    background-color : #0e1555;
+    background-color : #333333;
     }
 
 .pricing-section .pricing-head .price {
