--- a/css/simple_page.css
+++ b/css/simple_page.css
@@ -240,9 +240,9 @@ p.timeline-event-thumbnail {
   color: white;
   font-size: 0.6em;
   background-color: black;
-  -moz-box-shadow: inset 0 0 0 0em #33BFDB;
-  -webkit-box-shadow: inset 0 0 0 0em #33BFDB;
-  box-shadow: inset 0 0 0 0em #33BFDB;
+  -moz-box-shadow: inset 0 0 0 0em #7fff00;
+  -webkit-box-shadow: inset 0 0 0 0em #7fff00;
+  box-shadow: inset 0 0 0 0em #7fff00;
   display: inline-block;
   margin-bottom: 1.2em;
   padding: 0.1px 1em 0.1px 1em;
