--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ Version: 1.0
 Author: uiCookies.com
 */
 
+
 /*------------------------------------------------------------------
 [Table of contents]
 
@@ -37,157 +38,160 @@ Author: uiCookies.com
 # -------------------------------------------------------------------*/
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans Japanese", "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, Meiryo, sans-serif;
-    font-size   : 17px;
-    line-height : 1.7em;
-    color       : #353e55;
-    font-weight : 100;
-    background  : #ffffff;
-    border      : 10px solid #fff;
-    }
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans Japanese", "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, Meiryo, sans-serif;
+  font-size: 17px;
+  line-height: 1.7em;
+  color: #353e55;
+  font-weight: 100;
+  background: #ffffff;
+  border: 10px solid #fff;
+}
 
 .wf-notosansjapanese {
   font-family: "Noto Sans Japanese";
 }
+
 
 /* --------------------------------------
  * Global Typography
  *------------------------------------------*/
 
 h1, h2, h3, h4, h5, h6 {
-    margin : 0 0 15px;
-    color  : #333333;
-    }
+  margin: 0 0 15px;
+  color: #333333;
+}
 
 h1 {
-    font-size   : 36px;
-    line-height : 1.2em;
-    font-weight : 700;
-    }
+  font-size: 36px;
+  line-height: 1.2em;
+  font-weight: 700;
+}
 
 h2 {
-    font-size   : 30px;
-    line-height : 1.5em;
-    font-weight : 400;
-    }
+  font-size: 30px;
+  line-height: 1.5em;
+  font-weight: 400;
+}
 
 h3 {
-    font-size   : 24px;
-    line-height : 1.5em;
-    font-weight : 300;
-    }
+  font-size: 24px;
+  line-height: 1.5em;
+  font-weight: 300;
+}
 
 h4 {
-    font-size   : 18px;
-    line-height : 1.5em;
-    font-weight : 300;
-    }
+  font-size: 18px;
+  line-height: 1.5em;
+  font-weight: 300;
+}
 
 h5 {
-    font-size   : 16px;
-    line-height : 1.5em;
-    font-weight : 500;
-    }
+  font-size: 16px;
+  line-height: 1.5em;
+  font-weight: 500;
+}
 
 h6 {
-    font-size   : 15px;
-    line-height : 24px;
-    }
+  font-size: 15px;
+  line-height: 24px;
+}
+
 
 /* --------------------------------------
  * LINK STYLE
  *------------------------------------------*/
+
 a {
-    color              : #28c88c;
-    text-decoration    : none;
-    -webkit-transition : all 0.3s ease 0s;
-    -moz-transition    : all 0.3s ease 0s;
-    -o-transition      : all 0.3s ease 0s;
-    transition         : all 0.3s ease 0s;
-    }
+  color: #28c88c;
+  text-decoration: none;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
 
-a,
-a:active,
-a:focus,
-a:active {
-    text-decoration : none;
-    outline         : none
-    }
+a, a:active, a:focus, a:active {
+  text-decoration: none;
+  outline: none
+}
 
-a:hover,
-a:focus {
-    text-decoration : none;
-    color           : #999999;
-    }
+a:hover, a:focus {
+  text-decoration: none;
+  color: #999999;
+}
 
 p {
-    margin-bottom : 20px;
-    }
+  margin-bottom: 20px;
+}
 
 p.lead {
-    font-size   : 19px;
-    line-height : 1.7em;
-    }
+  font-size: 19px;
+  line-height: 1.7em;
+}
 
 ul {
-    margin     : 0;
-    padding    : 0;
-    list-style : none;
-    }
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 
 /*SP br enable*/
-.br-sp { display: none; }
+
+.br-sp {
+  display: none;
+}
+
 
 /*Button Style*/
+
 .btn {
-    padding        : 10px 30px;
-    margin-bottom  : 0;
-    font-size      : 16px;
-    border-radius  : 0;
-    font-weight    : 500;
-    border-width   : 2px;
-    text-transform : uppercase;
-    }
+  padding: 10px 30px;
+  margin-bottom: 0;
+  font-size: 16px;
+  border-radius: 0;
+  font-weight: 500;
+  border-width: 2px;
+  text-transform: uppercase;
+}
 
 .btn-lg {
-    font-size : 18px;
-    padding   : 15px 30px
-    }
+  font-size: 18px;
+  padding: 15px 30px
+}
+
 
 /*btn-primary*/
-.btn-primary {
-    background-color : #28c88c;
-    border-color     : #28c88c;
-    }
 
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active:focus {
-    background   : transparent;
-    color        : #28c88c;
-    border-color : #28c88c;
-    }
+.btn-primary {
+  background-color: #28c88c;
+  border-color: #28c88c;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active:focus {
+  background: transparent;
+  color: #28c88c;
+  border-color: #28c88c;
+}
+
 
 /*btn-default*/
+
 .btn-default {
-    color            : #ffffff;
-    background-color : transparent;
-    border-color     : #ffffff;
-    }
+  color: #ffffff;
+  background-color: transparent;
+  border-color: #ffffff;
+}
 
-.btn-default:hover,
-.btn-default:focus,
-.btn-default:active:focus {
-    background-color : transparent;
-    color            : #FFF;
-    border-color: transparent;
-    }
+.btn-default:hover, .btn-default:focus, .btn-default:active:focus {
+  background-color: transparent;
+  color: #FFF;
+  border-color: transparent;
+}
 
-button:focus,
-.btn:focus,
-.btn:active:focus {
-    outline : none;
-    }
+button:focus, .btn:focus, .btn:active:focus {
+  outline: none;
+}
 
 .blue-btn {
   background: #19b5c1;
@@ -213,117 +217,126 @@ button:focus,
   box-shadow: 1px 3px 7px 0 rgba(25, 181, 193, .5);
 }
 
+
 /* --------------------
  * Section Background
  * -------------------*/
 
 .gray-bg {
-    background-color : #F9F9F9;
-    border-top       : 1px solid #eeeeee;
-    border-bottom    : 1px solid #eeeeee;
-    }
+  background-color: #F9F9F9;
+  border-top: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+}
 
 .white-bg {
-    background-color : #ffffff;
-    }
+  background-color: #ffffff;
+}
+
 
 /* --------------------
  *  main Wrapper
  * -------------------*/
+
 #main-wrapper {
-    background : #ffffff;
-    overflow   : hidden;
-    }
+  background: #ffffff;
+  overflow: hidden;
+}
+
 
 /*-----------------------------
  * NAVIGATION & HEADER STYLE
  *-------------------------------*/
 
 .header {
-    position : absolute;
-    left     : 15px;
-    right    : 15px;
-    top      : 40px;
-    z-index  : 9;
-    }
+  position: absolute;
+  left: 15px;
+  right: 15px;
+  top: 40px;
+  z-index: 9;
+}
+
 
 /*Logo*/
+
 .navbar-brand {
-    padding : 0;
-    height  : auto;
-    margin  : 5px 0 !important;
+  padding: 0;
+  height: auto;
+  margin: 5px 0 !important;
 }
 
 .navbar-brand-svg {
-    width: 233px;
-    height: 20px;
-    margin: 11px 0 0 0;
-    fill: #333333;
+  width: 233px;
+  height: 20px;
+  margin: 11px 0 0 0;
+  fill: #333333;
 }
 
-@media (max-width : 768px) {
-    .navbar-brand {
-        width : 200px;
-    }
-    .navbar-brand-svg {
-        width: 186px;
-        height: 16px;
-        margin: 11px 0 0 0;
-    }
+@media (max-width: 768px) {
+  .navbar-brand {
+    width: 200px;
+  }
+  .navbar-brand-svg {
+    width: 186px;
+    height: 16px;
+    margin: 11px 0 0 0;
+  }
 }
+
 
 /*navbar*/
 
 .navbar {
-    border-radius  : 0;
-    padding        : 30px 0;
-    background     : transparent;
-    margin         : 0;
-    font-size      : 15px;
-    }
+  border-radius: 0;
+  padding: 30px 0;
+  background: transparent;
+  margin: 0;
+  font-size: 15px;
+}
 
-@media (max-width : 768px) {
-    .navbar {
-        padding : 10px;
-        }
-    }
+@media (max-width: 768px) {
+  .navbar {
+    padding: 10px;
+  }
+}
+
 
 /*navbar toggle*/
+
 .navbar-toggle {
-    margin        : 5px 0;
-    padding       : 11px 10px;
-    background    : transparent;
-    }
+  margin: 5px 0;
+  padding: 11px 10px;
+  background: transparent;
+}
 
 .navbar-toggle:hover {
-    color: #fff;
-    }
+  color: #fff;
+}
 
 .navbar-toggle .icon-bar {
-    background: #fff;
-    }
+  background: #fff;
+}
+
 
 /*Navigation Style*/
 
 .main-menu .navbar-right {
-    margin-right : -15px;
-    }
+  margin-right: -15px;
+}
 
 .main-menu .nav li a {
-    color       : #333333;
-    font-weight : 500;
-    padding     : 15px 0 15px 30px;
-    }
+  color: #333333;
+  font-weight: 500;
+  padding: 15px 0 15px 30px;
+}
 
-.main-menu .nav li a:hover,
-.main-menu .nav li.active a {
-    color      : #28c88c;
-    background : transparent;
-    }
+.main-menu .nav li a:hover, .main-menu .nav li.active a {
+  color: #28c88c;
+  background: transparent;
+}
 
 .main-menu .nav li a:focus {
-    background : transparent;
-    }
+  background: transparent;
+}
 
 .main-menu .nav .entry-btn {
   margin: 2.5px 0 2.5px 20px;
@@ -332,200 +345,315 @@ button:focus,
   border-radius: 25px;
 }
 
-
-@media (max-width : 991px) {
-    .main-menu .nav li a {
-        padding-left : 15px;
-        }
-    }
-
-@media (max-width : 768px) {
-    .main-menu .nav li {
-        text-align : center;
-        }
-
-    .main-menu .nav li a {
-        padding : 5px 0;
-        color: #333333;
-        }
-
-    .navbar-collapse {
-        margin-top : 10px;
-        background: #fff;
-        }
-    }
-
-
-/* Sticky Menu */
-.sticky-nav {
-    position           : fixed;
-    right              : 0;
-    left               : 0;
-    top                : 0;
-    z-index            : 999;
-    background         : #ffffff !important;
-    padding            : 5px 0;
-    box-shadow         : 0 2px 5px rgba(0, 0, 0, 0);
-    -webkit-transition : all .5s ease-in-out;
-    -moz-transition    : all .5s ease-in-out;
-    transition         : all .5s ease-in-out;
-    }
-
-.sticky-nav .nav li a {
-    color : #333333;
-    }
-
-.sticky-nav .navbar-toggle .icon-bar{
-    background: #333;
-    }
-
-#linearGradientEmeraldRect {
-   fill: url(#linearGradientEmerald);
+@media (max-width: 991px) {
+  .main-menu .nav li a {
+    padding-left: 15px;
+  }
 }
 
 @media (max-width: 768px) {
-    .sticky-nav{
-        padding-left: 10px;
-        padding-right: 10px;
-        }
+  .main-menu .nav li {
+    text-align: center;
+  }
+  .main-menu .nav li a {
+    padding: 5px 0;
+    color: #333333;
+  }
+  .navbar-collapse {
+    margin-top: 10px;
+    background: #fff;
+  }
+}
+
+
+/* Sticky Menu */
+
+.sticky-nav {
+  position: fixed;
+  right: 0;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  background: #ffffff !important;
+  padding: 5px 0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
+  -webkit-transition: all .5s ease-in-out;
+  -moz-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+}
+
+.sticky-nav .nav li a {
+  color: #333333;
+}
+
+.sticky-nav .navbar-toggle .icon-bar {
+  background: #333;
+}
+
+#linearGradientEmeraldRect {
+  fill: url(#linearGradientEmerald);
+}
+
+@media (max-width: 768px) {
+  .sticky-nav {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+/*-------------------
+ * Jumbotron
+ *-------------------*/
+
+.orig-jumbotron {
+    background-size       : cover;
+    padding               : 0;
+    margin                : 0;
+    height                : 100vh;
+    min-height            : 500px;
+    vertical-align        : middle;
+    position              : relative;
+    background-attachment : fixed;
+    background-repeat     : no-repeat;
+    background-position   : center center;
+    overflow              : hidden;
     }
+
+.orig-jumbotron .content {
+    color             : #ffffff;
+    position          : absolute;
+    top               : 30%;
+    left              : 0;
+    right             : 0;
+    height            : 30%;
+    /*width             : 1170px;*/
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    transform         : translateY(-50%);
+    -webkit-transform : translateY(-50%);
+    -moz-transform    : translateY(-50%);
+}
+
+.orig-jumbotron .content-one {
+  top: 40%;
+}
+
+.orig-jumbotron .content-two {
+  top: 72%;
+}
+
+.orig-jumbotron .content .typewriter {
+    color     : #333333;
+    font-size: 40px;
+    line-height: 135%;
+  }
+
+.orig-jumbotron .content .event-date {
+    width: 235px;
+    height: 22px;
+    margin: 10px 0 10px 0;
+    background-image:url(../img/event-date.svg);
+    background-size:100%;
+    }
+
+.orig-jumbotron .btn {
+    background: #19b5c1;
+    background: linear-gradient(90deg,#19b5c1,#28c88c);
+    margin-top : 40px;
+    border-color: transparent;
+    border-radius: 4px;
+    transition: all .15s ease-in-out;
+}
+
+.orig-jumbotron .btn:hover {
+  -ms-transform: translateY(-2px);
+  -webkit-transform: translateY(-2px);
+  transform: translateY(-2px);
+  box-shadow: 0 2px 6px 0 rgba(25,181,193,.5);
+}
+
+.orig-jumbotron .btn-shadow {
+    box-shadow: 0 2px 6px 0 rgba(25,181,193,.5);
+}
+
+.orig-jumbotron .btn-shadow:hover {
+    box-shadow: 1px 3px 7px 0 rgba(25,181,193,.5);
+}
+
+.orig-jumbotron span {
+  text-decoration: none;
+}
+
+.orig-jumbotron .catch-copy {
+  font-weight: 900;
+
+}
+
+.orig-jumbotron .input-catch-copy {
+  font-weight: 900;
+}
+
+.event-share-nav {
+  margin-top: 10px;
+  line-height : 0;
+}
+
+.orig-jumbotron .event-share-nav ul {
+  width: 600px;
+  padding:0;
+  font-size:0px;
+}
+
+.orig-jumbotron .event-share-nav li {
+  display: inline-block;
+  text-align: center;
+  padding: 0 1.5px;
+}
 
 /* --------------------------------------------
  *   Footer
  *---------------------------------------------- */
 
+
 /* Copyright */
 
 .footer .copyright-section {
-    font-size : 13px;
-    color     : #888888;
-    padding   : 30px 0;
-    }
+  font-size: 13px;
+  color: #888888;
+  padding: 30px 0;
+}
 
 .footer .copyright-section .copytext {
-    font-weight : 400;
-    display     : block;
-    }
+  font-weight: 400;
+  display: block;
+}
+
 
 /* ---------------------------------------------- /*
  * Preloader
 /* ---------------------------------------------- */
+
 #preloader {
-    background : #ffffff;
-    bottom     : 0;
-    left       : 0;
-    position   : fixed;
-    right      : 0;
-    top        : 0;
-    z-index    : 9999;
-    }
+  background: #ffffff;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 9999;
+}
 
-#status,
+#status, .status-mes {
+  background-image: url(../img/preloader_blue.gif);
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 200px;
+  left: 50%;
+  margin: -100px 0 0 -100px;
+  position: absolute;
+  top: 50%;
+  width: 200px;
+}
+
 .status-mes {
-    background-image    : url(../img/preloader_blue.gif);
-    background-position : center;
-    background-repeat   : no-repeat;
-    height              : 200px;
-    left                : 50%;
-    margin              : -100px 0 0 -100px;
-    position            : absolute;
-    top                 : 50%;
-    width               : 200px;
-    }
-
-.status-mes {
-    background : none;
-    left       : 0;
-    margin     : 0;
-    text-align : center;
-    top        : 65%;
-    }
+  background: none;
+  left: 0;
+  margin: 0;
+  text-align: center;
+  top: 65%;
+}
 
 
-  /* ---------------------------------------------- /*
+/* ---------------------------------------------- /*
    * TypeWriter
   /* ---------------------------------------------- */
 
-  span.title-cursor {
-    font-size: 35px;
-    -webkit-animation: blink 0.7s infinite;
-    -moz-animation: blink 0.7s infinite;
-    animation: blink 0.7s infinite;
-  }
+span.title-cursor {
+  font-size: 35px;
+  -webkit-animation: blink 0.7s infinite;
+  -moz-animation: blink 0.7s infinite;
+  animation: blink 0.7s infinite;
+}
 
-  @media (max-width: 768px) {
-    .wrapper h1 {
-      font-size: 34px;
-    }
-    .wrapper h3 {
-      font-size: 28px;
-    }
-    .wrapper span {
-      font-size: 22px;
-    }
-    .wrapper .social {
-      text-align: center;
-    }
-    .wrapper .social i {
-      font-size: 22px;
-    }
-    .wrapper .social a {
-      margin: 5px;
-    }
+@media (max-width: 768px) {
+  .wrapper h1 {
+    font-size: 34px;
   }
-  @keyframes blink {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+  .wrapper h3 {
+    font-size: 28px;
   }
-  @-webkit-keyframes blink {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+  .wrapper span {
+    font-size: 22px;
   }
-  @-moz-keyframes blink {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+  .wrapper .social {
+    text-align: center;
   }
+  .wrapper .social i {
+    font-size: 22px;
+  }
+  .wrapper .social a {
+    margin: 5px;
+  }
+}
 
-  /* ---------------------------------------------- /*
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+/* ---------------------------------------------- /*
    * ChatSupport スマホは非表示
   /* ---------------------------------------------- */
 
 @media (max-width: 700px) {
-  .mcs-chatLayout{
+  .mcs-chatLayout {
     display: none;
   }
-
   body h1 {
     font-size: 28px;
   }
-
   ul#countdown {
     width: 90%;
     margin: 100px auto 0 auto;
     padding: 20px 0 20px 0;
   }
 }
+
 
 /* ---------------------------------------------- /*
  * リンク無効化
