--- a/css/top.css
+++ b/css/top.css
@@ -99,6 +99,53 @@
 }
 
 /* --------------------------
+ * th-flow
+ *---------------------------*/
+.omni-card {
+  margin: 0 0 50px 0;
+}
+
+.omni-card .circle-image {
+  position: relative;
+
+  width: 200px;
+  height: 200px;
+  margin: 0 auto 30px auto;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  border: solid 0.5px #F4F4F2;
+}
+
+.omni-card .circle-image-wrapper {
+
+}
+
+.omni-card .circle-image img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 100px;
+}
+
+.omni-card .description {
+  margin: 20px 0;
+  text-align: center;
+}
+
+.omni-card .description h3 {
+  font-weight: 400;
+  font-size: 1.25em;
+}
+
+.omni-card .description p {
+  font-weight: 300;
+  font-size: 0.85em;
+}
+
+/* --------------------------
  * Pricing Table
  *---------------------------*/
 
@@ -266,7 +313,7 @@
 
 .entry-section-message p {
   width: 100%;
-  
+
   font-weight: 200;
   letter-spacing: 1.1px;
   font-size: 1em;
@@ -386,6 +433,16 @@
 /* ▼タブレット用デザインとして付け足すデザイン */
 /* -------------------------------------------- */
 @media all and (min-width: 768px) {
+  .omni-card {
+    margin: 30px 10% 50px 10%;
+  }
+  .omni-card .description h3 {
+    font-size: 1.1em;
+  }
+  .omni-card .description p {
+    font-size: 0.85em;
+  }
+
   ul#countdown {
     width: 60%;
   }
