[modify] Ver.4対応

--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ button:focus, .btn:focus, .btn:active:focus {
     width: 235px;
     height: 22px;
     margin: 10px 0 10px 0;
-    background-image:url(../img/event-date.svg);
+    background-image:url(../img/event-date-ver4.svg);
     background-size:100%;
     }
 
